Duplication error in duplication warning...
x_x Don't Repeat Yourself! (DRY principle)

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py27, py34
 
 [testenv]
-# This list is duplicated in tox.ini. Make sure to change both!
+# This list is duplicated in setup.py extra_requires. Make sure to change both!
 # This can stop once tox supports installing package extras.
 deps=pytest
     mock
